syntax = "proto3";

package eywa.eywa;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "github.com/eywa-foundation/eywa-go-client/eywa/params.proto";
import "github.com/eywa-foundation/eywa-go-client/eywa/user.proto";

option go_package = "github.com/eywa-foundation/eywa-go-client/x/eywa/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/eywa/eywa/params";
  
  }
  
  // Queries a list of GetUser items.
  rpc GetUser (QueryGetUserRequest) returns (QueryGetUserResponse) {
    option (google.api.http).get = "/eywa/eywa/get_user/{submitter}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetUserRequest {
  string submitter = 1;
}

message QueryGetUserResponse {
  User user = 1;
}

